--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,15 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootswatch/dist/lux/bootstrap.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/js/all.js",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
